--- a/turtlebot.service
+++ b/turtlebot.service
@@ -8,6 +8,7 @@ Group=ubuntu
 Type=simple
 Environment=TURTLEBOT3_MODEL=burger
 Environment=LDS_MODEL=LDS-02
+Environment=ROS_DOMAIN_ID=30
 ExecStart=/bin/bash -c 'source /opt/ros/humble/setup.bash && source /home/ubuntu/turtlebot3_ws/install/setup.bash && ros2 launch turtlebot3_bringup robot.launch.py'
 RemainAfterExit=no
 Restart=on-failure
